--- a/lib/bootstrap/css/bootstrap.css
+++ b/lib/bootstrap/css/bootstrap.css
@@ -587,6 +587,8 @@ pre code {
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
+  margin-top: 25px;
+  padding-top: 25px;
 }
 
 @media (min-width: 576px) {
@@ -636,13 +638,14 @@ pre code {
   flex-wrap: wrap;
   justify-content: center;
 }
-.about_section {
+/* .about_section {
   display: -ms-flexbox;
   display: flex;
+  flex-direction: column;
   -ms-flex-wrap: wrap;
   gap: 50px;
   justify-content: center;
-}
+} */
 
 .no-gutters {
   margin-right: 0;
