--- a/lib/bootstrap/css/bootstrap.css
+++ b/lib/bootstrap/css/bootstrap.css
@@ -8287,7 +8287,7 @@ button.bg-dark:focus {
   margin-right: 3rem !important;
 }
 
-.mb-5,
+/* .mb-5,
 .my-5 {
   margin-bottom: 3rem !important;
 }
@@ -8295,7 +8295,7 @@ button.bg-dark:focus {
 .ml-5,
 .mx-5 {
   margin-left: 3rem !important;
-}
+} */
 
 .p-0 {
   padding: 0 !important;
